Agora a playlist tem URL completa
